Login returns session token that can be used by client to verify latter.

--- a/src/main/g8/be-api/config/conf.d/api_gvabe.conf
+++ b/src/main/g8/be-api/config/conf.d/api_gvabe.conf
@@ -9,6 +9,9 @@ api {
       "/api/login" {
         post = "login"
       }
+      "/api/checkLoginToken" {
+        post = "checkLoginToken"
+      }
       "/api/systemInfo" {
         get = "systemInfo"
       }
