--- a/src/main/g8/be-api/config/conf.d/api_gvabe.conf
+++ b/src/main/g8/be-api/config/conf.d/api_gvabe.conf
@@ -15,6 +15,12 @@ api {
       "/api/systemInfo" {
         get = "systemInfo"
       }
+      "/api/groupList" {
+        get = "groupList"
+      }
+      "/api/userList" {
+        get = "userList"
+      }
     }
   }
 }
