View group list & functionality create group

--- a/src/main/g8/be-api/config/conf.d/api_gvabe.conf
+++ b/src/main/g8/be-api/config/conf.d/api_gvabe.conf
@@ -15,11 +15,25 @@ api {
       "/api/systemInfo" {
         get = "systemInfo"
       }
-      "/api/groupList" {
+
+      "/api/groups" {
         get = "groupList"
+        post = "createGroup"
       }
-      "/api/userList" {
+      "/api/group/:id" {
+        get = "getGroup"
+        put = "updateGroup"
+        delete = "deleteGroup"
+      }
+
+      "/api/users" {
         get = "userList"
+        post = "createUser"
+      }
+      "/api/user/:id" {
+        get = "getUser"
+        put = "updateUser"
+        delete = "deleteUser"
       }
     }
   }
