--- a/src/main/g8/be-api/config/conf.d/api_gvabe.conf
+++ b/src/main/g8/be-api/config/conf.d/api_gvabe.conf
@@ -30,7 +30,7 @@ api {
         get = "userList"
         post = "createUser"
       }
-      "/api/user/:id" {
+      "/api/user/:username" {
         get = "getUser"
         put = "updateUser"
         delete = "deleteUser"
