--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -1,6 +1,6 @@
 # See: https://github.com/btnguyen2k/go-giter8
 description  = This template generates an Admin Control Panel project with Vue-based frontend and Go-based backend using Echo framework.
-verbatim     = .DS_Store .gitignore .gitlab-ci.yml go.mod go.sum release.sh gin-bin be-api/vendor/* be-api/.g8/* fe-gui/public/* fe-gui/dist/* fe-gui/node_modules/* 
+verbatim     = .DS_Store .gitignore .gitlab-ci.yml go.mod go.sum release.sh gin-bin favicon.* be-api/vendor/* be-api/.g8/* fe-gui/public/*.png fe-gui/public/img/* fe-gui/dist/* fe-gui/node_modules/* 
 
 ## Note: it is recommended that name follows the format [a-zA-Z0-9]+ (only numbers and character), use camelCase to separate words (not underscores!)
 name         = go_echo-vueadmincp-seed
