--- a/src/main/g8/be-api/config/api.conf
+++ b/src/main/g8/be-api/config/api.conf
@@ -9,6 +9,7 @@ api {
     listen_addr = ${?HTTP_LISTEN_ADDR}
     listen_port = 8000
     listen_port = ${?HTTP_LISTEN_PORT}
+    listen_port = ${?PORT}
 
     # Name of HTTP header that holds "application id" info passed from client.
     # override this setting with env HTTP_HEADER_APP_ID
