Prepare to release template-v0.1.1

--- a/src/main/g8/be-api/config/api.conf
+++ b/src/main/g8/be-api/config/api.conf
@@ -3,7 +3,7 @@ api {
   ## HTTP/Rest gateway
   http {
     # Listen address & port for HTTP/REST API gateway.
-    # override these settings with env HTTP_LISTEN_ADDR and HTTP_LISTEN_PORT
+    # override these settings with env HTTP_LISTEN_ADDR and HTTP_LISTEN_PORT (or PORT)
     # set listen_port=0 to disable HTTP/REST API gateway.
     listen_addr = "0.0.0.0"
     listen_addr = ${?HTTP_LISTEN_ADDR}
@@ -28,16 +28,16 @@ api {
     allow_origins = ${?HTTP_ALLOW_ORIGINS}
   }
 
-  ## gRPC gateway
-  grpc {
-    # Listen address & port for gRPC API gateway.
-    # override these settings with env GRPC_LISTEN_ADDR and GRPC_LISTEN_PORT
-    # set listen_port=0 to disable gRPC API gateway.
-    listen_addr = "0.0.0.0"
-    listen_addr = ${?GRPC_LISTEN_ADDR}
-    listen_port = 8090
-    listen_port = ${?GRPC_LISTEN_PORT}
-  }
+//  ## gRPC gateway
+//  grpc {
+//    # Listen address & port for gRPC API gateway.
+//    # override these settings with env GRPC_LISTEN_ADDR and GRPC_LISTEN_PORT
+//    # set listen_port=0 to disable gRPC API gateway.
+//    listen_addr = "0.0.0.0"
+//    listen_addr = ${?GRPC_LISTEN_ADDR}
+//    listen_port = 8090
+//    listen_port = ${?GRPC_LISTEN_PORT}
+//  }
 
   # Client cannot send request that exceeds this size
   # - absolute number: size in bytes
