--- a/src/main/g8/be-api/config/conf.d/api_gvabe.conf
+++ b/src/main/g8/be-api/config/conf.d/api_gvabe.conf
@@ -41,12 +41,21 @@ api {
 
 gvabe {
   db {
-    # Support db types: sqlite
+    # Support db types: sqlite, pgsql
+    # override this setting with env DB_TYPE
     type = "sqlite"
+    type = ${?DB_TYPE}
 
     sqlite {
       directory = "./data/sqlite"
       dbname = "gvabe"
+    }
+
+    pgsql {
+      # override this setting with env DB_PGSQL_URL (or DATABASE_URL)
+      url = "postgres://test:test@localhost:5432/test?sslmode=disable&client_encoding=UTF-8&application_name=govueadmin"
+      url = ${?DB_PGSQL_URL}
+      url = ${?DATABASE_URL}
     }
   }
 }
