--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ jobs:
     steps:
       - checkout
       - setup_remote_docker
-      - run: date && whoiam && pwd
+      - run: date && whoami && pwd
       - run: curl https://cli-assets.heroku.com/install.sh | sh
       - run:
           name: Build Docker Image
