--- a/.azure/azure-pipelines.yml
+++ b/.azure/azure-pipelines.yml
@@ -11,7 +11,35 @@ trigger:
 pool:
   vmImage: 'ubuntu-latest'
 
+variables:
+  goVersion: '1.13'
+  goBuiltAppName: 'main'
+  nodejsVersion: '13.x'
+  dockerVersion: '19.03.9'
+  herokuRegistry: 'registry.heroku.com'
+  herokuApp: 'exteross'
+  branchMasterChanged: ${{ eq(variables['Build.SourceBranch'], 'refs/heads/master') }}
 
+stages:
+  - stage: build
+    displayName: Build project
+    jobs:
+      - job: build
+        displayName: Build project
+        steps:
+        - task: GoTool@0
+          displayName: Prepare Go env
+          inputs:
+            version: '$(goVersion)'
+        - task: NodeTool@0
+          displayName: Prepare NodeJs env
+          inputs:
+            versionSpec: '$(nodejsVersion)'
+        - task: DockerInstaller@0
+          displayName: Prepare Docker CLI
+          inputs:
+            dockerVersion: '$(dockerVersion)'
+            releaseType: 'stable'
   
 # variables:
 #   GOBIN:  '$(GOPATH)/bin' # Go binaries path
