--- a/.azure/azure-pipelines.yml
+++ b/.azure/azure-pipelines.yml
@@ -12,10 +12,10 @@ pool:
   vmImage: 'ubuntu-latest'
 
 variables:
-  goVersion: '1.13'
+  goVersion: '1.14'           # second latest major.minor version
   goBuiltAppName: 'main'
-  nodejsVersion: '13.x'
-  dockerVersion: '19.03.9'
+  nodejsVersion: '12.x'       # latest LTS version
+  dockerVersion: '19.03.12'   # latest major.minor version
   herokuRegistry: 'registry.heroku.com'
   herokuApp: 'exteross'
   branchMasterChanged: ${{ eq(variables['Build.SourceBranch'], 'refs/heads/master') }}
@@ -40,7 +40,14 @@ stages:
           inputs:
             dockerVersion: '$(dockerVersion)'
             releaseType: 'stable'
-  
+        - script: |
+            echo System.ArtifactsDirectory: $(System.ArtifactsDirectory)
+            ls -la $(System.ArtifactsDirectory)
+            echo System.DefaultWorkingDirectory: $(System.DefaultWorkingDirectory)
+            ls -la $(System.DefaultWorkingDirectory)
+            echo System.WorkFolder: $(System.WorkFolder)
+            ls -la $(System.WorkFolder)
+
 # variables:
 #   GOBIN:  '$(GOPATH)/bin' # Go binaries path
 #   GOROOT: '/usr/local/go1.11' # Go installation path
