--- a/.azure/azure-pipelines.yml
+++ b/.azure/azure-pipelines.yml
@@ -19,6 +19,7 @@ variables:
   herokuRegistry: 'registry.heroku.com'
   herokuApp: 'exteross'
   branchMasterChanged: ${{ eq(variables['Build.SourceBranch'], 'refs/heads/master') }}
+  sessionDirectory: $(System.DefaultWorkingDirectory)/..
 
 stages:
   - stage: build
@@ -31,6 +32,9 @@ stages:
           displayName: Prepare Go env
           inputs:
             version: '$(goVersion)'
+        - script: export GO111MODULE=on && go get github.com/btnguyen2k/go-giter8/g8@v0.5.1
+          displayName: Install go-giter8
+        - script: g8 version
         - task: NodeTool@0
           displayName: Prepare NodeJs env
           inputs:
