--- a/.azure/azure-pipelines.yml
+++ b/.azure/azure-pipelines.yml
@@ -34,7 +34,13 @@ stages:
             version: '$(goVersion)'
         - script: export GO111MODULE=on && go get github.com/btnguyen2k/go-giter8/g8@v0.5.1
           displayName: Install go-giter8
-        - script: g8 version
+        - script: |
+            echo GOPATH: $GOPATH
+            ls -la $GOPATH
+            echo GOROOT: $GOROOT
+            ls -la $GOROOT
+            echo GOBIN: $GOBIN
+            ls -la $GOBIN
         - task: NodeTool@0
           displayName: Prepare NodeJs env
           inputs:
