--- a/.azure/azure-pipelines.yml
+++ b/.azure/azure-pipelines.yml
@@ -39,6 +39,7 @@ stages:
             ls -la $GOPATH
             echo GOROOT: $GOROOT
             ls -la $GOROOT
+            ls -la ${GOROOT}/bin
             echo GOBIN: $GOBIN
             ls -la $GOBIN
         - task: NodeTool@0
