--- a/.azure/azure-pipelines.yml
+++ b/.azure/azure-pipelines.yml
@@ -13,6 +13,8 @@ pool:
 
 variables:
   goVersion: '1.14'           # second latest major.minor version
+  GOBIN: '$(GOROOT)/bin'
+  GO111MODULE: 'on'
   goBuiltAppName: 'main'
   nodejsVersion: '12.x'       # latest LTS version
   dockerVersion: '19.03.12'   # latest major.minor version
@@ -32,7 +34,10 @@ stages:
           displayName: Prepare Go env
           inputs:
             version: '$(goVersion)'
-        - script: export GO111MODULE=on && go get github.com/btnguyen2k/go-giter8/g8@v0.5.1
+        - task: Go@0
+          inputs:
+            command: 'get'
+            arguments: 'github.com/btnguyen2k/go-giter8/g8@v0.5.1'
           displayName: Install go-giter8
         - script: |
             echo GOPATH: $GOPATH
