--- a/.azure/azure-pipelines.yml
+++ b/.azure/azure-pipelines.yml
@@ -47,6 +47,7 @@ stages:
             ls -la ${GOROOT}/bin
             echo GOBIN: $GOBIN
             ls -la $GOBIN
+        - script: g8 veersion
         - task: NodeTool@0
           displayName: Prepare NodeJs env
           inputs:
