--- a/.azure/azure-pipelines.yml
+++ b/.azure/azure-pipelines.yml
@@ -12,6 +12,7 @@ pool:
   vmImage: 'ubuntu-latest'
 
 variables:
+  projectName: 'go_echo-vueadmincp-seed'
   goVersion: '1.14'           # second latest major.minor version
   GOBIN: '$(GOROOT)/bin'
   GO111MODULE: 'on'
@@ -39,15 +40,6 @@ stages:
             command: 'get'
             arguments: 'github.com/btnguyen2k/go-giter8/g8@v0.5.1'
           displayName: Install go-giter8
-        - script: |
-            echo GOPATH: $GOPATH
-            ls -la $GOPATH
-            echo GOROOT: $GOROOT
-            ls -la $GOROOT
-            ls -la ${GOROOT}/bin
-            echo GOBIN: $GOBIN
-            ls -la $GOBIN
-        - script: g8 veersion
         - task: NodeTool@0
           displayName: Prepare NodeJs env
           inputs:
@@ -58,12 +50,28 @@ stages:
             dockerVersion: '$(dockerVersion)'
             releaseType: 'stable'
         - script: |
-            echo System.ArtifactsDirectory: $(System.ArtifactsDirectory)
-            ls -la $(System.ArtifactsDirectory)
-            echo System.DefaultWorkingDirectory: $(System.DefaultWorkingDirectory)
-            ls -la $(System.DefaultWorkingDirectory)
-            echo System.WorkFolder: $(System.WorkFolder)
-            ls -la $(System.WorkFolder)
+            g8 version
+            g8 new --verbose --no-inputs file://$(System.DefaultWorkingDirectory)
+            ls -la
+            ls -la $(projectName)
+          displayName: Generate project from g8 template
+          workingDirectory: $(sessionDirectory)
+        # - script: |
+        #     echo GOPATH: $GOPATH
+        #     ls -la $GOPATH
+        #     echo GOROOT: $GOROOT
+        #     ls -la $GOROOT
+        #     ls -la ${GOROOT}/bin
+        #     echo GOBIN: $GOBIN
+        #     ls -la $GOBIN
+        # - script: g8 version
+        # - script: |
+        #     echo System.ArtifactsDirectory: $(System.ArtifactsDirectory)
+        #     ls -la $(System.ArtifactsDirectory)
+        #     echo System.DefaultWorkingDirectory: $(System.DefaultWorkingDirectory)
+        #     ls -la $(System.DefaultWorkingDirectory)
+        #     echo System.WorkFolder: $(System.WorkFolder)
+        #     ls -la $(System.WorkFolder)
 
 # variables:
 #   GOBIN:  '$(GOPATH)/bin' # Go binaries path
