--- a/.azure/azure-pipelines.yml
+++ b/.azure/azure-pipelines.yml
@@ -1,9 +1,8 @@
-# Go
-# Build your Go project.
-# Add steps that test, save build artifacts, deploy, and more:
-# https://docs.microsoft.com/azure/devops/pipelines/languages/go
+# Azure pipeline to build & deploy GoVueAdmin demo site
+# https://docs.microsoft.com/azure/devops/pipelines/
 
 trigger:
+  batch: true
   branches:
     include:
     - '*'
@@ -12,92 +11,125 @@ pool:
   vmImage: 'ubuntu-latest'
 
 variables:
-  projectName: 'go_echo-vueadmincp-seed'
-  goVersion: '1.14'           # second latest major.minor version
+  goVersion: '1.14'                     # second latest major.minor version
   GOBIN: '$(GOROOT)/bin'
   GO111MODULE: 'on'
   goBuiltAppName: 'main'
-  nodejsVersion: '12.x'       # latest LTS version
-  dockerVersion: '19.03.12'   # latest major.minor version
+  nodejsVersion: '12.x'                 # latest LTS version
+  dockerVersion: '19.03.12'             # latest major.minor version
   herokuRegistry: 'registry.heroku.com'
-  herokuApp: 'exteross'
+  herokuApp: 'demo-govueadmin'
   branchMasterChanged: ${{ eq(variables['Build.SourceBranch'], 'refs/heads/master') }}
   sessionDirectory: $(System.DefaultWorkingDirectory)/..
+  projectName: 'govueadmin-seed'
+  projectDirectory: $(sessionDirectory)/$(projectName)
 
 stages:
-  - stage: build
+- stage: build
+  displayName: Build project
+  jobs:
+  - job: build
     displayName: Build project
-    jobs:
-      - job: build
-        displayName: Build project
-        steps:
-        - task: GoTool@0
-          displayName: Prepare Go env
-          inputs:
-            version: '$(goVersion)'
-        - task: Go@0
-          inputs:
-            command: 'get'
-            arguments: 'github.com/btnguyen2k/go-giter8/g8@v0.5.1'
-          displayName: Install go-giter8
-        - task: NodeTool@0
-          displayName: Prepare NodeJs env
-          inputs:
-            versionSpec: '$(nodejsVersion)'
-        - task: DockerInstaller@0
-          displayName: Prepare Docker CLI
-          inputs:
-            dockerVersion: '$(dockerVersion)'
-            releaseType: 'stable'
-        - script: |
-            g8 version
-            g8 new --verbose --no-inputs file://$(System.DefaultWorkingDirectory)
-            ls -la
-            ls -la $(projectName)
-          displayName: Generate project from g8 template
-          workingDirectory: $(sessionDirectory)
-        # - script: |
-        #     echo GOPATH: $GOPATH
-        #     ls -la $GOPATH
-        #     echo GOROOT: $GOROOT
-        #     ls -la $GOROOT
-        #     ls -la ${GOROOT}/bin
-        #     echo GOBIN: $GOBIN
-        #     ls -la $GOBIN
-        # - script: g8 version
-        # - script: |
-        #     echo System.ArtifactsDirectory: $(System.ArtifactsDirectory)
-        #     ls -la $(System.ArtifactsDirectory)
-        #     echo System.DefaultWorkingDirectory: $(System.DefaultWorkingDirectory)
-        #     ls -la $(System.DefaultWorkingDirectory)
-        #     echo System.WorkFolder: $(System.WorkFolder)
-        #     ls -la $(System.WorkFolder)
+    steps:
+    - task: GoTool@0
+      displayName: Prepare Go env
+      inputs:
+        version: '$(goVersion)'
+    - task: Go@0
+      inputs:
+        command: 'get'
+        arguments: 'github.com/btnguyen2k/go-giter8/g8@v0.5.1'
+      displayName: Install go-giter8
+    - task: NodeTool@0
+      displayName: Prepare NodeJs env
+      inputs:
+        versionSpec: '$(nodejsVersion)'
+    - task: DockerInstaller@0
+      displayName: Prepare Docker CLI
+      inputs:
+        dockerVersion: '$(dockerVersion)'
+        releaseType: 'stable'
+    - script: |
+        g8 --version
+        g8 new --no-inputs file://$(System.DefaultWorkingDirectory)
+      displayName: Generate project from g8 template
+      workingDirectory: $(sessionDirectory)
+    - task: Npm@1
+      displayName: 'FE: npm install'
+      inputs:
+        command: install
+        workingDir: '$(projectDirectory)/fe-gui'
+    - task: Npm@1
+      displayName: 'FE: npm run build'
+      inputs:
+        command: custom
+        customCommand: 'run build'
+        workingDir: '$(projectDirectory)/fe-gui'
+    - script: cd $(projectDirectory)/be-api && go build -o $(goBuiltAppName) -tags netgo -a
+      displayName: 'BE: go build'
+    - script: cd $(projectDirectory)/be-api && go test -v --cover
+      displayName: 'BE: go test'
 
-# variables:
-#   GOBIN:  '$(GOPATH)/bin' # Go binaries path
-#   GOROOT: '/usr/local/go1.11' # Go installation path
-#   GOPATH: '$(system.defaultWorkingDirectory)/gopath' # Go workspace path
-#   modulePath: '$(GOPATH)/src/github.com/$(build.repository.name)' # Path to the module's code
-
-# steps:
-# - script: |
-#     mkdir -p '$(GOBIN)'
-#     mkdir -p '$(GOPATH)/pkg'
-#     mkdir -p '$(modulePath)'
-#     shopt -s extglob
-#     shopt -s dotglob
-#     mv !(gopath) '$(modulePath)'
-#     echo '##vso[task.prependpath]$(GOBIN)'
-#     echo '##vso[task.prependpath]$(GOROOT)/bin'
-#   displayName: 'Set up the Go workspace'
-
-# - script: |
-#     go version
-#     go get -v -t -d ./...
-#     if [ -f Gopkg.toml ]; then
-#         curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
-#         dep ensure
-#     fi
-#     go build -v .
-#   workingDirectory: '$(modulePath)'
-#   displayName: 'Get dependencies, then build'
+- stage: deploy_heroku
+  displayName: Build image and deploy to Heroku
+  dependsOn: build
+  condition: eq(variables['branchMasterChanged'], false)
+  variables:
+  - group: Release
+  jobs:
+  - job: build
+    displayName: Build image
+    steps:
+    - task: GoTool@0
+      displayName: Prepare Go env
+      inputs:
+        version: '$(goVersion)'
+    - task: Go@0
+      inputs:
+        command: 'get'
+        arguments: 'github.com/btnguyen2k/go-giter8/g8@v0.5.1'
+      displayName: Install go-giter8
+    - script: |
+        g8 --version
+        g8 new --no-inputs file://$(System.DefaultWorkingDirectory)
+      displayName: Generate project from g8 template
+      workingDirectory: $(sessionDirectory)
+    - task: DockerInstaller@0
+      displayName: Prepare Docker CLI
+      inputs:
+        dockerVersion: '$(dockerVersion)'
+        releaseType: 'stable'
+    - script: |
+        APP_SHORTNAME=`jq -r '.shortname' $(projectDirectory)/appinfo.json`
+        echo '##vso[task.setvariable variable=APP_SHORTNAME]'$APP_SHORTNAME
+        APP_VERSION=`jq -r '.version' $(projectDirectory)/appinfo.json`
+        BUILD_DATE=`date '+%Y%m%d'`
+        APP_VERSION=${APP_VERSION}-b${BUILD_DATE}.$(Build.BuildId)
+        echo '##vso[task.setvariable variable=APP_VERSION]'$APP_VERSION
+        appInfo=`jq ".version=\"$APP_VERSION\"" $(projectDirectory)/appinfo.json`
+        echo $appInfo > $(projectDirectory)/appinfo.json
+        sed -i 's/{?HTTP_LISTEN_PORT}/{?PORT}/g' $(projectDirectory)/be-api/config/api.conf
+        sed -i 's/{?DB_PGSQL_URL}/{?DATABASE_URL}/g' $(projectDirectory)/be-api/config/conf.d/api_gvabe.conf
+        rm -f $(projectDirectory)/fe-gui/.env
+      displayName: Init application info
+    - task: Docker@2
+      displayName: Build Docker image
+      inputs:
+        command: build
+        buildContext: '$(projectDirectory)'
+        repository: '$(APP_SHORTNAME)'
+        tags: latest
+    - script: |
+        echo Logging in to $(herokuRegistry)...
+        export HEROKU_API_KEY=$(HEROKU_TOKEN)
+        echo $(HEROKU_TOKEN) | docker login -u _ --password-stdin $(herokuRegistry)
+        docker tag $(APP_SHORTNAME) $(herokuRegistry)/$(herokuApp)/web
+        docker images
+        echo Pushing image...
+        docker push $(herokuRegistry)/$(herokuApp)/web
+        echo Releasing image...
+        heroku container:release web -a $(herokuApp)
+        echo Logging out...
+        docker logout $(herokuRegistry)
+        unset HEROKU_API_KEY
+      displayName: Push and Deploy to Heroku
