--- a/src/main/g8/fe-gui/src/config.json
+++ b/src/main/g8/fe-gui/src/config.json
@@ -1,13 +1,14 @@
 {
   "app": {
-    "name": "$name$",
-    "shortname": "$shortname$",
-    "desc": "$desc$",
-    "version": "$version$"
+    "name": "#{appName}",
+    "initial": "#{appInitial}",
+    "shortname": "#{appShortname}",
+    "desc": "#{appDescription}",
+    "version": "#{appVersion}"
   },
   "api_client": {
-    "bo_api_base_url": "http://127.0.0.1:3000",
-    "app_id": "$shortname$_fe",
+    "bo_api_base_url": "",
+    "app_id": "#{appShortname}_fe",
     "header_app_id": "X-App-Id",
     "header_access_token": "X-Access-Token"
   }
