--- a/.azure/azure-pipelines.yml
+++ b/.azure/azure-pipelines.yml
@@ -92,6 +92,7 @@ stages:
     - script: |
         g8 --version
         g8 new --no-inputs file://$(System.DefaultWorkingDirectory)
+        cat $(projectDirectory)/Dockerfile
       displayName: Generate project from g8 template
       workingDirectory: $(sessionDirectory)
     - task: DockerInstaller@0
@@ -110,7 +111,6 @@ stages:
         echo $appInfo > $(projectDirectory)/appinfo.json
         sed -i 's/{?HTTP_LISTEN_PORT}/{?PORT}/g' $(projectDirectory)/be-api/config/api.conf
         sed -i 's/{?DB_PGSQL_URL}/{?DATABASE_URL}/g' $(projectDirectory)/be-api/config/conf.d/api_gvabe.conf
-        rm -f $(projectDirectory)/fe-gui/.env
       displayName: Init application info
     - task: Docker@2
       displayName: Build Docker image
@@ -120,6 +120,8 @@ stages:
         repository: '$(APP_SHORTNAME)'
         tags: latest
     - script: |
+        cat $(projectDirectory)/Dockerfile
+        cat $(projectDirectory)/fe-gui/src/config.json
         echo Logging in to $(herokuRegistry)...
         export HEROKU_API_KEY=$(HEROKU_TOKEN)
         echo $(HEROKU_TOKEN) | docker login -u _ --password-stdin $(herokuRegistry)
